Add support for historical retrieval job