@@ -1,27 +1,35 @@
 package dev.caraml.store.sparkjob.adapter;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import dev.caraml.store.protobuf.core.FeatureTableProto.FeatureTableSpec;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 import java.util.stream.Stream;
+import lombok.AllArgsConstructor;
 
+@AllArgsConstructor
 public class StreamIngestionArgumentAdapter implements SparkApplicationArgumentAdapter {
 
-  private FeatureTableArgumentAdapter featureTableArgumentAdapter;
-  private IngestionSourceArgumentAdapter ingestionSourceArgumentAdapter;
-
-  public StreamIngestionArgumentAdapter(
-      String project, FeatureTableSpec spec, Map<String, String> entityNameToType) {
-    featureTableArgumentAdapter = new FeatureTableArgumentAdapter(project, spec, entityNameToType);
-    ingestionSourceArgumentAdapter = new IngestionSourceArgumentAdapter(spec.getStreamSource());
-  }
+  private final String project;
+  private final FeatureTableSpec spec;
+  private final Map<String, String> entityNameToType;
 
   @Override
   public List<String> getArguments() {
-    return Stream.concat(
-            featureTableArgumentAdapter.getArguments().stream(),
-            ingestionSourceArgumentAdapter.getArguments().stream())
-        .collect(Collectors.toList());
+
+    try {
+      Stream<String> featureTableArguments =
+          Stream.of(
+              "--feature-table",
+              new FeatureTableConverter().convert(project, spec, entityNameToType));
+      Stream<String> sourceArguments =
+          Stream.of("--source", new DataSourceConverter().convert(spec.getStreamSource()));
+      return Stream.of(featureTableArguments, sourceArguments)
+          .flatMap(Function.identity())
+          .toList();
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
   }
 }
